cabal-version:      2.4
name:               mylink
version:            0.1.0.0

author:             Kalyani Hatti
maintainer:         plt.kalyani@gmail.com

executable mylink
    main-is:          Main.hs
    build-depends:
        base ^>= 4.16.4.0,
        mtl == 2.2.2,
        containers == 0.6.5.1,
        megaparsec == 9.5.0,
        directory == 1.3.6.2,
        filepath == 1.4.2.2,
        text == 2.0.2,
        pretty-simple == 4.1.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        BlockArguments,
        ImportQualifiedPost,
        BangPatterns,
        TupleSections
    other-modules:
        Macro,
        Compile